# UtilBucket

./: .clang-format  .gitignore  CMakeLists.txt  clang_format_project.sh
benchmark/: CMakeLists.txt
design_patterns/: abstract_factory.hpp  factory.hpp  helper.hpp  prototype.hpp  singleton.hpp
meta/: function_traits.hpp  iterator_traits.hpp  polymorphism_traits.hpp
test/: CMakeLists.txt
