find_library(BENCHMARK_LIB NAMES lbenchmark libbenchmark benchmark)
if (BENCHMARK_LIB)
    set(BENCHMARK_FILES )
    add_executable(runbenchmark ${BENCHMARK_FILES})
    target_link_libraries(runbenchmark ${PROJECT_NAME} ${BENCHMARK_LIB})
    if (UNIX)
        target_link_libraries(runbenchmark -lpthread)
    endif (UNIX)
else()
    message("GOOGLE BENCHMARK library not found")
endif()